refactor(mentor): Change <div> tags to <span> and <p> in cards

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -79,21 +79,21 @@
                                 </div>
                                 <div class="card-info">
                                     <div class="card-info-bar">
-                                        <div class="card-info-time">
+                                        <span class="card-info-time">
                                             10 minutes ago
-                                        </div>
+                                        </span>
                                         <div class="card-info-more">
                                             <button>
                                                 <img src="img/kebab.svg" alt="Show more" class="kebab">
                                             </button>
                                         </div>
                                     </div>
-                                    <div class="card-info-text">
+                                    <p class="card-info-text">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                    </div>
-                                    <div class="card-info-date">
+                                    </p>
+                                    <span class="card-info-date">
                                         2024.2.21
-                                    </div>
+                                    </span>
                                 </div>
                             </li>
                             <li class="card card-selected">
@@ -106,21 +106,21 @@
                                 </div>
                                 <div class="card-info">
                                     <div class="card-info-bar">
-                                        <div class="card-info-time">
+                                        <span class="card-info-time">
                                             10 minutes ago
-                                        </div>
+                                        </span>
                                         <div class="card-info-more">
                                             <button>
                                                 <img src="img/kebab.svg" alt="Show More" class="kebab">
                                             </button>
                                         </div>
                                     </div>
-                                    <div class="card-info-text">
+                                    <p class="card-info-text">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                    </div>
-                                    <div class="card-info-date">
+                                    </p>
+                                    <span class="card-info-date">
                                         2024.2.21
-                                    </div>
+                                    </span>
                                 </div>
                             </li>
                             <li class="card">
@@ -132,21 +132,21 @@
                                 </div>
                                 <div class="card-info">
                                     <div class="card-info-bar">
-                                        <div class="card-info-time">
+                                        <span class="card-info-time">
                                             10 minutes ago
-                                        </div>
+                                        </span>
                                         <div class="card-info-more">
                                             <button>
                                                 <img src="img/kebab.svg" alt="Show More" class="kebab">
                                             </button>
                                         </div>
                                     </div>
-                                    <div class="card-info-text">
+                                    <p class="card-info-text">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                    </div>
-                                    <div class="card-info-date">
+                                    </p>
+                                    <span class="card-info-date">
                                         2024.2.21
-                                    </div>
+                                    </span>
                                 </div>
                             </li>
                             <li class="card">
@@ -159,21 +159,21 @@
                                 </div>
                                 <div class="card-info">
                                     <div class="card-info-bar">
-                                        <div class="card-info-time">
+                                        <span class="card-info-time">
                                             10 minutes ago
-                                        </div>
+                                        </span>
                                         <div class="card-info-more">
                                             <button>
                                                 <img src="img/kebab.svg" alt="Show More" class="kebab">
                                             </button>
                                         </div>
                                     </div>
-                                    <div class="card-info-text">
+                                    <p class="card-info-text">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                    </div>
-                                    <div class="card-info-date">
+                                    </p>
+                                    <span class="card-info-date">
                                         2024.2.21
-                                    </div>
+                                    </span>
                                 </div>
                             </li>
                             <li class="card">
@@ -185,21 +185,21 @@
                                 </div>
                                 <div class="card-info">
                                     <div class="card-info-bar">
-                                        <div class="card-info-time">
+                                        <span class="card-info-time">
                                             10 minutes ago
-                                        </div>
+                                        </span>
                                         <div class="card-info-more">
                                             <button>
                                                 <img src="img/kebab.svg" alt="Show More" class="kebab">
                                             </button>
                                         </div>
                                     </div>
-                                    <div class="card-info-text">
+                                    <p class="card-info-text">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                    </div>
-                                    <div class="card-info-date">
+                                    </p>
+                                    <span class="card-info-date">
                                         2024.2.21
-                                    </div>
+                                    </span>
                                 </div>
                             </li>
                             <li class="card">
@@ -211,21 +211,21 @@
                                 </div>
                                 <div class="card-info">
                                     <div class="card-info-bar">
-                                        <div class="card-info-time">
+                                        <span class="card-info-time">
                                             10 minutes ago
-                                        </div>
+                                        </span>
                                         <div class="card-info-more">
                                             <button>
                                                 <img src="img/kebab.svg" alt="Show More" class="kebab">
                                             </button>
                                         </div>
                                     </div>
-                                    <div class="card-info-text">
+                                    <p class="card-info-text">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                    </div>
-                                    <div class="card-info-date">
+                                    </p>
+                                    <span class="card-info-date">
                                         2024.2.21
-                                    </div>
+                                    </span>
                                 </div>
                             </li>
                         </ul>
@@ -255,21 +255,21 @@
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
-                                    <div class="card-info-time">
+                                    <span class="card-info-time">
                                         10 minutes ago
-                                    </div>
+                                    </span>
                                     <div class="card-info-more">
                                         <button>
                                             <img src="img/kebab.svg" alt="Show More" class="kebab">
                                         </button>
                                     </div>
                                 </div>
-                                <div class="card-info-text">
+                                <p class="card-info-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                </div>
-                                <div class="card-info-date">
+                                </p>
+                                <span class="card-info-date">
                                     2024.2.21
-                                </div>
+                                </span>
                             </div>
                         </li>
                         <li class="card card-selected no-shrink-card">
@@ -282,21 +282,21 @@
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
-                                    <div class="card-info-time">
+                                    <span class="card-info-time">
                                         10 minutes ago
-                                    </div>
+                                    </span>
                                     <div class="card-info-more">
                                         <button>
                                             <img src="img/kebab.svg" alt="Show More" class="kebab">
                                         </button>
                                     </div>
                                 </div>
-                                <div class="card-info-text">
+                                <p class="card-info-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                </div>
-                                <div class="card-info-date">
+                                </p>
+                                <span class="card-info-date">
                                     2024.2.21
-                                </div>
+                                </span>
                             </div>
                             <button class="save-icon">
                                 <img src="img/save.svg" alt="save-icon">
@@ -311,21 +311,21 @@
                             </div>
                             <div class="card-info">
                                 <div class="card-info-bar">
-                                    <div class="card-info-time">
+                                    <span class="card-info-time">
                                         10 minutes ago
-                                    </div>
+                                    </span>
                                     <div class="card-info-more">
                                         <button>
                                             <img src="img/kebab.svg" alt="Show More" class="kebab">
                                         </button>
                                     </div>
                                 </div>
-                                <div class="card-info-text">
+                                <p class="card-info-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                </div>
-                                <div class="card-info-date">
+                                </p>
+                                <span class="card-info-date">
                                     2024.2.21
-                                </div>
+                                </span>
                             </div>
                         </li>
                     </ul>
@@ -438,21 +438,21 @@
                                     </div>
                                     <div class="card-info">
                                         <div class="card-info-bar">
-                                            <div class="card-info-time">
+                                            <span class="card-info-time">
                                                 10 minutes ago
-                                            </div>
+                                            </span>
                                             <div class="card-info-more">
                                                 <button>
                                                     <img src="img/kebab.svg" alt="Show More" class="kebab">
                                                 </button>
                                             </div>
                                         </div>
-                                        <div class="card-info-text">
+                                        <p class="card-info-text">
                                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                        </div>
-                                        <div class="card-info-date">
+                                        </p>
+                                        <span class="card-info-date">
                                             2024.2.21
-                                        </div>
+                                        </span>
                                     </div>
                                 </li>
                                 <li class="card card-selected">
@@ -465,21 +465,21 @@
                                     </div>
                                     <div class="card-info">
                                         <div class="card-info-bar">
-                                            <div class="card-info-time">
+                                            <span class="card-info-time">
                                                 10 minutes ago
-                                            </div>
+                                            </span>
                                             <div class="card-info-more">
                                                 <button>
                                                     <img src="img/kebab.svg" alt="Show More" class="kebab">
                                                 </button>
                                             </div>
                                         </div>
-                                        <div class="card-info-text">
+                                        <p class="card-info-text">
                                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                        </div>
-                                        <div class="card-info-date">
+                                        </p>
+                                        <span class="card-info-date">
                                             2024.2.21
-                                        </div>
+                                        </span>
                                     </div>
                                 </li>
                                 <li class="card">
@@ -491,21 +491,21 @@
                                     </div>
                                     <div class="card-info">
                                         <div class="card-info-bar">
-                                            <div class="card-info-time">
+                                            <span class="card-info-time">
                                                 10 minutes ago
-                                            </div>
+                                            </span>
                                             <div class="card-info-more">
                                                 <button>
                                                     <img src="img/kebab.svg" alt="Show More" class="kebab">
                                                 </button>
                                             </div>
                                         </div>
-                                        <div class="card-info-text">
+                                        <p class="card-info-text">
                                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quam.
-                                        </div>
-                                        <div class="card-info-date">
+                                        </p>
+                                        <span class="card-info-date">
                                             2024.2.21
-                                        </div>
+                                        </span>
                                     </div>
                                 </li>
                             </ul>
