refactor(mentor): fix typo and line breaks

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -353,7 +353,6 @@
                         다양하게 활용할 수 있습니다.
                     </p>
                 </div>
-
                 <p class="mobile-description">
                     나만의 폴더를 무제한으로 만들고
                     다양하게 활용할 수 있습니다.
@@ -514,7 +513,7 @@
                 </div>
                 <div class="feature-description">
                     <h3>저장한 링크를
-                        <en class="gradient5">검색</en>해 보세요
+                        <em class="gradient5">검색</em>해 보세요
                     </h3>
                     <p class="description">
                         중요한 정보들을 검색으로 쉽게 찾아보세요.
