--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="" content="">
-  <meta property="og:url" content="https://linkbrary05.netlify.app/">
+  <meta property="og:url" content="https://linkbrary0304.netlify.app/">
   <meta property="og:title" content="Linkbrary">
   <meta property="og:type" content="website">
   <meta property="og:image" content="/assets/img/png/meta.png">
@@ -34,8 +34,7 @@
       <h1 class="header-title">
         <span class="header-title__text">세상의 모든 정보</span>를
         <br />
-        <span class="pc">쉽게 저장하고 관리해 보세요</span>
-        <span class="tablet">쉽게 저장하고<br/>관리해 보세요</span>
+        쉽게 저장하고<br class="tablet-br"/> 관리해 보세요
       </h1>
       <a class="header-link btn-color" href="/signup.html">
         링크 추가하기
@@ -51,7 +50,7 @@
         <h2 class="card-item__title">
           <span class="title-1-gradient background-clip-text">
             원하는 링크</span>를
-            <br />
+            <br class="pc-br"/>
             저장하세요
         </h2>
         <p class="card-item__text">
@@ -70,7 +69,7 @@
       <div class="card-inner">
         <h2 class="card-item__title">
           링크를 폴더로
-          <br />
+          <br class="pc-br"/>
           <span class="title-2-gradient background-clip-text">관리</span>하세요
         </h2>
         <p class="card-item__text">
@@ -87,7 +86,7 @@
       <div class="card-inner">
         <h2 class="card-item__title">
           저장된 링크로
-          <br />
+          <br class="pc-br"/>
           <span class="title-3-gradient background-clip-text">공유</span>해 보세요
         </h2>
         <p class="card-item__text">
@@ -106,7 +105,7 @@
       <div class="card-inner">
         <h2 class="card-item__title">
           저장한 링크로
-          <br />
+          <br class="pc-br"/>
           <span class="title-4-gradient background-clip-text">검색</span>보세요
         </h2>
         <p class="card-item__text">
