--- a/Linkbrary/signup.html
+++ b/Linkbrary/signup.html
@@ -57,10 +57,10 @@
                 <div class="other-id">
                     다른 방식으로 가입하기
                     <div class="social-links">
-                        <a href="https://www.google.com/" target="_blank">
+                        <a href="https://www.google.com/" target="_blank" rel='noreferrer noopener'>
                             <img src="img/google.svg" alt="Google Sign In Link">
                         </a>
-                        <a href="https://www.kakaocorp.com/page/" target="_blank">
+                        <a href="https://www.kakaocorp.com/page/" target="_blank" rel='noreferrer noopener'>
                             <img src="img/kakao.svg" alt="Kakao Sign In Link" class="img-border">
                         </a>
                     </div>
