refactor(mentor): Replace h1 tag style with .blind class

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -29,7 +29,7 @@
             <a href="/">
                 <img src="img/logo.svg" alt="Linkbrary" class="sign-logo">
             </a>
-            Linkbrary
+            <span class="blind">Linkbrary</span>
         </h1>
         <a href="/signin.html" class="btn header-login">로그인</a>
     </header>
