refactor(mentor): Replace <h3> tag style with .feature-description-heading class

--- a/Linkbrary/index.html
+++ b/Linkbrary/index.html
@@ -236,7 +236,7 @@
         <section class="feature-description-section">
             <div class="container">
                 <div class="feature-description">
-                    <h3><em class="gradient2">원하는 링크</em>를 저장하세요</h3>
+                    <h3 class="feature-description-heading"><em class="gradient2">원하는 링크</em>를 저장하세요</h3>
                     <p class="description">
                         나중에 읽고 싶은 글, 다시 보고 싶은 영상,
                         사고 싶은 옷, 기억하고 싶은 모든 것을
@@ -345,7 +345,7 @@
                     </div>
                 </div>
                 <div class="feature-description">
-                    <h3>링크를 폴더로
+                    <h3 class="feature-description-heading">링크를 폴더로
                         <em class="gradient3">관리</em>하세요
                     </h3>
                     <p class="description">
@@ -360,7 +360,7 @@
             </div>
             <div class="container">
                 <div class="feature-description">
-                    <h3>저장한 링크를
+                    <h3 class="feature-description-heading">저장한 링크를
                         <em class="gradient4">공유</em>해 보세요.
                     </h3>
                     <p class="description">
@@ -408,7 +408,7 @@
                         <div class="search-bar"><input type="text" name="link-name" id="link-name" class="search-input"
                                 placeholder="코드잇">
                         </div>
-                        <h3 class="search-result">코드잇으로 검색한 결과입니다</h3>
+                        <h3 class="feature-description-heading" class="search-result">코드잇으로 검색한 결과입니다</h3>
                         <div class="link-list">
                             <div class="link-list-bar">
                                 <div class="link-list-bar-btns">
@@ -512,7 +512,7 @@
                     </div>
                 </div>
                 <div class="feature-description">
-                    <h3>저장한 링크를
+                    <h3 class="feature-description-heading">저장한 링크를
                         <em class="gradient5">검색</em>해 보세요
                     </h3>
                     <p class="description">
