--- a/landing.html
+++ b/landing.html
@@ -21,19 +21,19 @@
   <header>
     <div class="nav">
       <a class="nav-logo" href="./landing.html">
-        <img alt="로고" src="./images/logo.svg">
       </a>
       <a class="nav-button" href="./signin/signin.html">로그인</a>
     </div>
     <div class="head">
       <h1 class="head-text">
         <span class="head-text-gradiant">세상의 모든 정보</span>를<br>
-        쉽게 저장하고 저장해 보세요
+        쉽게 저장하고<br class="break-mobile">
+        저장해 보세요
       </h1>
       <a class="head-button" href="./signup/">
         링크 추가하기
       </a>
-      <div class="head-image" style="background-image: url('./images/img-main.svg');">
+      <div class="head-image">
       </div>
     </div>
   </header>
@@ -41,7 +41,7 @@
     <section class="contents">
       <div>
         <h2 class="contents-text-title">
-          <span class="contents-text-gradient first">원하는 링크</span>를<br>
+          <span class="contents-text-gradient first">원하는 링크</span>를<br class="break-not-mobile">
           저장하세요
         </h2>
         <p class="contents-text-small">
@@ -54,12 +54,12 @@
       </div>
     </section>
 
-    <section class="contents">
+    <section class="contents reverse">
       <div class="contents-image" alt="이미지-관리" style="background-image: url('./images/img2.svg');">
       </div>
       <div>
         <h2 class="contents-text-title">
-          링크를 폴더로<br>
+          링크를 폴더로<br class="break-not-mobile">
           <span class="contents-text-gradient second">관리</span>하세요
         </h2>
         <p class="contents-text-small">
@@ -72,7 +72,7 @@
     <section class="contents">
       <div>
         <h2 class="contents-text-title">
-          저장한 링크를<br> 
+          저장한 링크를<br class="break-not-mobile">
           <span class="contents-text-gradient third">공유</span>해보세요
         </h2>
         <p class="contents-text-small">
@@ -84,12 +84,12 @@
       </div>
     </section>
 
-    <section class="contents">
+    <section class="contents reverse">
       <div class="contents-image" alt="이미지-검색" style="background-image: url(./images/img4.svg);">
       </div>
       <div>
         <h2 class="contents-text-title">
-          저장한 링크를<br>
+          저장한 링크를<br class="break-not-mobile">
           <span class="contents-text-gradient fourth">검색</span>해보세요
         </h2>
         <p class="contents-text-small">
@@ -101,12 +101,16 @@
 
   <footer>
     <section class="info">
-      <div class="info-author">
-        ©codeit - 2023
-      </div>
-      <div class="info-description">
-        <a href="./privacy/Privacy.html">Privacy Police</a>
-        <a href="./faq/Faq.html">FAQ</a>
+      <div class="info-box">
+        <div class="info-author">
+          ©codeit - 2023
+        </div>
+        <div>
+          <div class="info-description">
+            <a href="./privacy/Privacy.html">Privacy Police</a>
+            <a href="./faq/Faq.html">FAQ</a>
+          </div>
+        </div>
       </div>
       <div class="info-sns">
         <a href="">
