--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Linkbrary</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,19 +43,12 @@
             한 공간에 저장하세요
           </div>
           <div class="images">
-            <img src="images/Card 1.png" alt="카드이미지1">
-            <div class="center">
-              <img src="images/Card.png" alt="카드이미지2">
-              <div class="icon">
-                <img src="images/Group 20.svg" alt="카드이미지2의 아이콘">
-              </div>
-            </div>
-            <img src="images/Card-1.png" alt="카드이미지3">
+            <img src="images/_img 1.png" alt="링크 클릭 이미지">
           </div>
         </div>
         <div class="service-02 card">
           <div class="images">
-            <img src="images/디스크립션 없는 팝업 1.png" alt="폴더 이름 변경하기 팝업 이미지">
+            <img src="images/img 4.png" alt="폴더 이름 변경하기 팝업 이미지">
           </div>
           <div class="card-text">
             <h2>
@@ -66,7 +60,7 @@
           </div>
         </div>
         <div class="service-03 card">
-          <div>
+          <div class="card-text">
             <h2>
               저장한 링크를<br>
               <span>공유</span>해 보세요<br>
@@ -76,15 +70,14 @@
             공유해 보세요
           </div>
           <div class="images">
-            <img class="images-back" src="images/image 25.png" alt="팝업 이미지 배경">
-            <img class="images-front" src="images/폴더 공유하기 팝업 1.png" alt="폴더 공유하기 팝업">
+            <img src="images/img3 1.png" alt="폴더 공유하기 팝업">
           </div>
         </div>
         <div class="service-04 card">
           <div class="images">
-            <img src="images/스크린샷 2023-03-17 오후 3.22 1.png" alt="링크 검색 창 이미지">
+            <img src="images/_img4 1.png" alt="링크 검색 창 이미지">
           </div>
-          <div>
+          <div class="card-text">
             <h2>
               저장한 링크를<br>
               <span>검색</span>해 보세요<br>
