메타테그 이미지 변경

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta
       name="description"
       property="og:description"
-      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+      content="https://i.pinimg.com/736x/b0/6c/ce/b06cceeafd897e9a3e679544daedda45.jpg"
       key="description"
     />
     <meta
       property="og:image"
-      content="https://visitbusan.net/uploadImgs/files/cntnts/20211130150754165_wufrotr"
+      content="https://i.pinimg.com/736x/b0/6c/ce/b06cceeafd897e9a3e679544daedda45.jpg"
       key="image"
     />
     <meta name="twitter:card" content="summary_large_image" />
