Add og tag draft

--- a/landing.html
+++ b/landing.html
@@ -12,6 +12,26 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
   
+  <!-- og : 페이스북, 카카오톡 미완성 -->
+  <meta property="og:image" content="">
+  <meta property="og:title" content="Linkbrary">
+  <meta
+    name="description" 
+    property="og:description"
+    content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
+  <meta property="og:url" content="">
+
+  <!-- og : 트위터 >> 미완성 -->
+  <meta name="twitter:image" content="">
+  <meta
+      name="twitter:title"
+      content="Linkbrary">
+  <meta
+      name="twitter:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
+  <meta name="twitter:card" content="">
+
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style-landing.css">
 
