--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,6 +9,8 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css"
     />
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./common.css" />
     <link rel="stylesheet" href="./style.css" />
     <title>linkbrary</title>
   </head>
@@ -23,7 +25,8 @@
     <main>
       <section class="contents-01">
         <h2 class="content--title">
-          <strong class="highlight puplePink">세상의 모든 정보</strong>를<br />
+          <strong class="highlight--purplePink">세상의 모든 정보</strong
+          >를<br />
           쉽게 저장하고 관리해보세요
         </h2>
         <a class="button addLink" href="./signup.html">링크 추가하기</a>
@@ -33,10 +36,10 @@
           alt="랜딩페이지 첫 이미지"
         />
       </section>
-      <section class="contents left">
-        <div class="content">
+      <section class="contents">
+        <div class="left">
           <h2 class="content--title">
-            <strong class="highlight redSkyblue">원하는 링크</strong>를<br />
+            <strong class="highlight--redSkyblue">원하는 링크</strong>를<br />
             저장하세요
           </h2>
           <p class="content--desc">
@@ -48,14 +51,14 @@
         <img
           class="content--img"
           src="./img/landing/img_2.png"
-          alt="랜딩페이지 두번째 이미지"
+          alt="원하는 링크를 저장하기"
         />
       </section>
       <section class="contents right">
-        <div>
+        <div class="right">
           <h2 class="content--title">
             링크를 폴더로<br />
-            <strong class="highlight skyblueYellow">관리</strong>하세요
+            <strong class="highlight--skyblueYellow">관리</strong>하세요
           </h2>
           <p class="content--desc">
             나만의 폴더를 무제한으로 만들고<br />
@@ -65,14 +68,14 @@
         <img
           class="content--img"
           src="./img/landing/img_3.png"
-          alt="랜딩페이지 세번째 이미지"
+          alt="링크를 폴더로 관리하기"
         />
       </section>
-      <section class="contents left">
-        <div>
+      <section class="contents">
+        <div class="left">
           <h2 class="content--title">
             저장한 링크를<br />
-            <strong class="highlight pupleBlack">공유</strong>해보세요
+            <strong class="highlight--pupleBlack">공유</strong>해보세요
           </h2>
           <p class="content--desc">
             여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
@@ -83,21 +86,21 @@
         <img
           class="content--img"
           src="./img/landing/img_4.png"
-          alt="랜딩페이지 네번째 이미지"
+          alt="저장한 링크를 공유하기"
         />
       </section>
-      <section class="contents right">
-        <div>
+      <section class="contents">
+        <div class="right">
           <h2 class="content--title">
             저장한 링크를<br />
-            <strong class="highlight pinkSkyblue">검색</strong>해보세요
+            <strong class="highlight--pinkSkyblue">검색</strong>해보세요
           </h2>
           <p class="content--desc">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
         </div>
         <img
           class="content--img"
           src="./img/landing/img_5.png"
-          alt="랜딩페이지 다섯번째 이미지"
+          alt="저장한 링크를 검색하기"
         />
       </section>
     </main>
