--- a/signin.html
+++ b/signin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,45 +9,48 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css"
     />
-    <link rel="stylesheet" href="./sign.css" />
-    <title>sign in</title>
+    <link rel="stylesheet" href="./auth.css" />
+    <link rel="stylesheet" href="./common.css" />
+    <link rel="stylesheet" href="./reset.css" />
+
+    <title>로그인</title>
   </head>
   <body>
-    <form class="form">
+    <form class="auth-form">
       <h1 class="logo">
         <a href="./index.html"><img src="./img/Linkbrary.png" alt="logo" /></a>
       </h1>
-      <div class="form--desc">
-        <p class="form--validate">회원이 아니신가요?</p>
-        <a class="form--link" href="./signup.html">회원 가입하기</a>
+      <div class="auth-form--desc">
+        <p class="auth-form--validate">회원이 아니신가요?</p>
+        <a class="auth-form--link" href="./signup.html">회원 가입하기</a>
       </div>
-      <div class="form--labelInput">
-        <label class="form--label" for="email">이메일</label>
+      <div class="auth-form--labelInput">
+        <label class="auth-form--label" for="email">이메일</label>
         <input
           placeholder="codeit@codeit.com"
-          class="form--input"
+          class="auth-form--input"
           id="email"
           name="email"
         />
       </div>
-      <div class="form--labelInput">
-        <label class="form--label" for="password">비밀번호</label>
+      <div class="auth-form--labelInput">
+        <label class="auth-form--label" for="password">비밀번호</label>
         <input
           placeholder="********"
-          class="form--input"
+          class="auth-form--input"
           id="password"
           name="password"
           type="password"
         />
       </div>
       <button class="button button--sign">로그인</button>
-      <div class="socialLogin">
-        <p class="socialLogin--desc">소셜 로그인</p>
-        <div class="socialLogin--link">
-          <a class="goggle" href="https://www.google.com"
+      <div class="social-Login">
+        <p class="social-Login--desc">소셜 로그인</p>
+        <div class="social-Login--link">
+          <a class="social-Login--goggle" href="https://www.google.com"
             ><img src="./img/socialLogin/google_logo.png" alt="구글 로그인"
           /></a>
-          <a class="kakao" href="https://www.kakaocorp.com/page/"
+          <a class="social-Login--kakao" href="https://www.kakaocorp.com/page/"
             ><img src="./img/socialLogin/kakao_logo.png" alt="카카오 로그인"
           /></a>
         </div>
