--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://whimsical-babka-c0f686.netlify.app/"
+    />
+    <meta property="og:title" content="Linkbrary" />
+    <meta
+      property="og:image"
+      content="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAyMTJfMjU4%2FMDAxNzA3NzA0ODM1MDkw.-KO-xGT81rWxoelMWuN_BQElmdTp63kDyJIJ2BVIwQ0g.8NjLo3OmI3uF_9uGffYo8w2r-I5nlDbYaYP7SBkJwewg.JPEG.cinnabar0%2Foutput_408552084.jpg&type=a340"
+    />
+    <meta
+      property="og:description"
+      content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+    />
+    <meta property="og:site_name" content="Linkbrary" />
     <link
       rel="stylesheet"
       as="style"
