--- a/index.html
+++ b/index.html
@@ -1,143 +1,128 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:type" content="website" />
+    <meta charset="utf-8" />
+    <title>Linkbrary</title>
+    <meta property="og:title" content="Linkbrary" key="title" />
     <meta
-      property="og:url"
-      content="https://whimsical-babka-c0f686.netlify.app/"
-    />
-    <meta property="og:title" content="Linkbrary" />
-    <meta
-      property="og:image"
-      content="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAyMTJfMjU4%2FMDAxNzA3NzA0ODM1MDkw.-KO-xGT81rWxoelMWuN_BQElmdTp63kDyJIJ2BVIwQ0g.8NjLo3OmI3uF_9uGffYo8w2r-I5nlDbYaYP7SBkJwewg.JPEG.cinnabar0%2Foutput_408552084.jpg&type=a340"
-    />
-    <meta
+      name="description"
       property="og:description"
       content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
+      key="description"
     />
-    <meta property="og:site_name" content="Linkbrary" />
+    <meta
+      property="og:image"
+      content="https://visitbusan.net/uploadImgs/files/cntnts/20211130150754165_wufrotr"
+      key="image"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@linkbrary" />
+    <meta name="twitter:title" content="Linkbrary" />
+    <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
+    <meta
+      name="twitter:image"
+      content="https://visitbusan.net/uploadImgs/files/cntnts/20211130150754165_wufrotr"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
     <link
       rel="stylesheet"
-      as="style"
-      crossorigin
-      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="./reset.css" />
-    <link rel="stylesheet" href="./common.css" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>linkbrary</title>
+    <link rel="stylesheet" href="./src/landing.css" />
   </head>
   <body>
-    <header class="header">
-      <a href="index.html" class="header--title"
-        ><h1 class="header--h1">
-          <img src="./img/Linkbrary.png" alt="logo" /></h1
-      ></a>
-      <a class="button login" href="./signin.html">로그인</a>
+    <nav>
+      <div class="gnb">
+        <a href="index.html">
+          <img class="logo" src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
+        </a>
+        <a class="cta cta-short" href="signin.html">
+          <span>로그인</span>
+        </a>
+      </div>
+    </nav>
+    <header>
+      <div class="hero-header">
+        <h1 class="slogan">
+          <span class="slogan-gradient background-clip-text"> 세상의 모든 정보</span>를
+          <br />
+          쉽게 저장하고 관리해 보세요
+        </h1>
+        <a class="cta cta-long" href="signup.html">
+          <span>링크 추가하기</span>
+        </a>
+        <img src="./images/hero.png" class="hero-image" alt="Linkbrary 서비스 소개" />
+      </div>
     </header>
-    <main>
-      <section class="contents-01">
-        <h2 class="content--title">
-          <strong class="highlight--purplePink">세상의 모든 정보</strong
-          >를<br />
-          쉽게 저장하고 관리해보세요
+    <article>
+      <section>
+        <h2 class="title">
+          <span class="title-1-gradient background-clip-text"> 원하는 링크</span>를 저장하세요
         </h2>
-        <a class="button addLink" href="./signup.html">링크 추가하기</a>
-        <img
-          class="img--main"
-          src="./img/landing/img_1.png"
-          alt="랜딩페이지 첫 이미지"
-        />
+        <p class="description">
+          나중에 읽고 싶은 글, 다시 보고 싶은 영상,
+          <br class="line-break-tablet-desktop" />
+          사고 싶은 옷, 기억하고 싶은 모든 것을
+          <br class="line-break-tablet-desktop" />
+          한 공간에 저장하세요.
+        </p>
+        <img src="./images/image1.png" class="content-image" alt="링크의 내용이 담긴 카드들" />
       </section>
-      <section class="contents">
-        <div class="left">
-          <h2 class="content--title">
-            <strong class="highlight--redSkyblue">원하는 링크</strong>를<br />
-            저장하세요
-          </h2>
-          <p class="content--desc">
-            나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br />
-            사고 싶은 옷, 기억하고 싶은 모든 것을<br />
-            한 공간에 저장하세요.
-          </p>
-        </div>
-        <img
-          class="content--img"
-          src="./img/landing/img_2.png"
-          alt="원하는 링크를 저장하기"
-        />
+      <section>
+        <h2 class="title">
+          링크를 폴더로
+          <span class="title-2-gradient background-clip-text">관리</span>하세요
+        </h2>
+        <p class="description">
+          나만의 폴더를 무제한으로 만들고
+          <br class="line-break-tablet-desktop" />
+          다양하게 활용할 수 있습니다.
+        </p>
+        <img src="./images/image2.png" class="content-image" alt="폴더 이름 변경 기능" />
       </section>
-      <section class="contents right">
-        <div class="right">
-          <h2 class="content--title">
-            링크를 폴더로<br />
-            <strong class="highlight--skyblueYellow">관리</strong>하세요
-          </h2>
-          <p class="content--desc">
-            나만의 폴더를 무제한으로 만들고<br />
-            다양하게 활용할 수 있습니다.
-          </p>
-        </div>
-        <img
-          class="content--img"
-          src="./img/landing/img_3.png"
-          alt="링크를 폴더로 관리하기"
-        />
+      <section>
+        <h2 class="title">
+          저장한 링크를
+          <span class="title-3-gradient background-clip-text">공유</span>해 보세요
+        </h2>
+        <p class="description">
+          여러 링크를 폴더에 담고 공유할 수 있습니다. 가족, 친구, 동료들에게 쉽고 빠르게 링크를
+          공유해 보세요.
+        </p>
+        <img src="./images/image3.png" class="content-image" alt="폴더 공유 기능" />
       </section>
-      <section class="contents">
-        <div class="left">
-          <h2 class="content--title">
-            저장한 링크를<br />
-            <strong class="highlight--pupleBlack">공유</strong>해보세요
-          </h2>
-          <p class="content--desc">
-            여러 링크를 폴더에 담고 공유할 수 있습니다.<br />
-            가족, 친구, 동료들에게 쉽고 빠르게 링크를<br />
-            공유해 보세요.
-          </p>
-        </div>
-        <img
-          class="content--img"
-          src="./img/landing/img_4.png"
-          alt="저장한 링크를 공유하기"
-        />
+      <section>
+        <h2 class="title">
+          저장한 링크를
+          <span class="title-4-gradient background-clip-text">검색</span>해 보세요
+        </h2>
+        <p class="description">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
+        <img src="./images/image4.png" class="content-image" alt="링크 검색 기능" />
       </section>
-      <section class="contents">
-        <div class="right">
-          <h2 class="content--title">
-            저장한 링크를<br />
-            <strong class="highlight--pinkSkyblue">검색</strong>해보세요
-          </h2>
-          <p class="content--desc">중요한 정보들을 검색으로 쉽게 찾아보세요.</p>
-        </div>
-        <img
-          class="content--img"
-          src="./img/landing/img_5.png"
-          alt="저장한 링크를 검색하기"
-        />
-      </section>
-    </main>
+    </article>
     <footer>
-      <div class="footer--container">
-        <p class="codeit">codeit-2023</p>
-        <div class="footer--privacy">
-          <a class="privacy" href="privacy">Privacy Policy</a>
-          <a class="faq" href="./faq">FAQ</a>
+      <div class="footer-box">
+        <span class="copyright">©codeit - 2023</span>
+        <div class="footer-links">
+          <a class="footer-link" href="privacy.html">Privacy Policy</a>
+          <a class="footer-link" href="faq.html">FAQ</a>
         </div>
-        <div class="sites">
-          <a href="https://www.facebook.com/" target="_blank">
-            <img src="./img/footer/Vector-1.png" />
+        <div class="sns">
+          <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+            <img src="./images/facebook.svg" alt="facebook 홈페이지로 연결된 facebook 로고" />
           </a>
-          <a href="https://twitter.com/?lang=en" target="_blank">
-            <img src="./img/footer/Vector-2.png" />
+          <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+            <img src="./images/twitter.svg" alt="twitter 홈페이지로 연결된 twitter 로고" />
           </a>
-          <a href="https://www.youtube.com/" target="_blank">
-            <img src="./img/footer/Vector-3.png" />
+          <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+            <img src="./images/youtube.svg" alt="youtube 홈페이지로 연결된 youtube 로고" />
           </a>
-          <a href="https://www.instagram.com/" target="_blank">
-            <img src="./img/footer/Vector-4.png" />
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+            <img src="./images/instagram.svg" alt="instagram 홈페이지로 연결된 instagram 로고" />
           </a>
         </div>
       </div>
